16-Gateway-API/nginx-gw-fabric/svc-nginx2.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-2
  namespace: ngf-test
spec:
  selector:
    app: nginx-2
  ports:
    - port: 80
      targetPort: 80
